--- a/public/frontend/css/headers.css
+++ b/public/frontend/css/headers.css
@@ -44,7 +44,7 @@
 }
 
     .navbar-inverse {
-        background-color: #25395a;
+        background-color: #0B297F;
         border-top: #feba29;
         border-bottom: #feba29 4px solid;
     }
