--- a/public/frontend/css/links.css
+++ b/public/frontend/css/links.css
@@ -5,7 +5,7 @@ body {
     padding-top: 0;
     padding-bottom: 20px;
     background-color: #333333;
-    border-top: #feba29 10px solid
+    border-top: #FACE23 10px solid
 }
 
 .link-sections{
