--- a/public/frontend/css/headers.css
+++ b/public/frontend/css/headers.css
@@ -99,7 +99,7 @@
 }
 
 .navbar-logo{
-    background-image: url(../img/src.jpg);
+    background-image: url(../img/src.png);
     height: 50px;
     width: auto;
     background-size: 50px 50px;
