--- a/public/frontend/css/papers.css
+++ b/public/frontend/css/papers.css
@@ -6789,7 +6789,7 @@ button.close {
 }
 .navbar .dropdown-menu > li > a,
 .navbar .dropdown-menu > li > a:focus {
-  background-color: #A94442;
+  background-color: #FACE23;
   font-size: 13px;
   font-weight: 300;
 }
